exports[`Upgrade help logs a warning when \`scriptPreprocessor\` and/or \`preprocessorIgnorePatterns\` are used 1`] = `
"[33m[1m● [22mThe settings \`scriptPreprocessor\` and \`preprocessorIgnorePatterns\` were replaced by \`transform\` and \`transformIgnorePatterns\` which support multiple preprocessors.

  Jest now treats your current settings as: 

    \"transform\": {\".*\": \"bar/baz\"}
    \"transformIgnorePatterns\": \"bar/baz,qux/quux\"

  Please update your configuration.

  Jest changed the default configuration for tests.

  [1mConfiguration Documentation:[22m https://facebook.github.io/jest/docs/configuration.html
  [1mJest Issue Tracker:[22m https://github.com/facebook/jest/issues
[39m"
`;

exports[`transform throws for invalid value 1`] = `
"[31mConfiguration option \`[1mtransform[22m\` must be an object. Use it like this:

[1m  \"transform\": {
    \"^.+\\\\.js$\": \"string\"
  }[22m

  Jest changed the default configuration for tests.

  [1mConfiguration Documentation:[22m https://facebook.github.io/jest/docs/configuration.html
  [1mJest Issue Tracker:[22m https://github.com/facebook/jest/issues
[39m"
`;

exports[`transform throws for invalid value 2`] = `
"[31mConfiguration option \`[1mtransform[22m\` must be an object. Use it like this:

[1m  \"transform\": {
    \"^.+\\\\.js$\": \"<rootDir>/node_modules/babel-jest\"
  }[22m

  Jest changed the default configuration for tests.

  [1mConfiguration Documentation:[22m https://facebook.github.io/jest/docs/configuration.html
  [1mJest Issue Tracker:[22m https://github.com/facebook/jest/issues
[39m"
`;
